# zoho-mcp-server

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  bandit-report-updated.json  bandit-report.json  coverage.xml  e2e_test_report_final.md  e2e_test_report_final_updated.md  e2e_test_report_updated.md  oauth_diagnosis_result.json  pyproject.toml  render.yaml  requirements-dev.txt  requirements-security.txt  requirements.txt  run_e2e_tests.py  workdrive_discovery_results.json  workspace_relationships_results.json
.github/workflows/: ci.yml  security.yml
config/: README.md  alternative_port_config.txt  cursor-mcp-config.example.json  env.example
docs/: security-automation-summary.md
docs/01_requirement/: requirement_spec.md
docs/02_plan/: project_implementation_plan.md
docs/design/: functional_design.md
docs/guides/: README.md  fix_400_error_guide.md  fix_reauth_required.md  manual_portal_id_guide.txt  quick_reauth_steps.txt  render_security_setup.md  user_management_proposal.md  zoho_correct_scopes.txt  zoho_exact_values.txt  zoho_oauth_setup_guide.md  zoho_registration_troubleshooting.md  zoho_scope_location_guide.md  zoho_scope_setup_guide.md  zoho_self_client_scopes.txt  zoho_self_client_setup.md  zoho_simple_scope_test.txt
docs/plan/: implementation_review.md  security_checklist.md  test_strategy.md
reports/: README.md
scripts/: __init__.py  run-security-tests.sh  validate-security-setup.py
server/: __init__.py  main.py  mcp_stdio_server.py
server/auth/: __init__.py  ip_allowlist.py  jwt_handler.py  oauth_handler.py
server/core/: config.py  exceptions.py  mcp_handler.py
server/handlers/: __init__.py  files.py  tasks.py  webhooks.py
server/middleware/: __init__.py  i18n.py  rate_limit.py
server/storage/: __init__.py  redis_client.py
server/zoho/: __init__.py  api_client.py  oauth_client.py
tests/: __init__.py  conftest.py
tests/e2e/: README.md  conftest.py  e2e_test_report.md  locustfile.py  (+5 more)
tools/: README.md  check_configuration.py  diagnose_oauth.py  exchange_auth_code.py  explore_workspace_relationships.py  export_project_task_details.py  final_verification.py  generate_jwt_secret.py  generate_task_report.py  generate_test_token.py  generate_zoho_auth_url.py  get_portal_id.py  get_project_tasks.py  get_project_tasks_via_mcp.py  get_real_portal_and_projects.py  get_workspace_files.py  get_zoho_projects_list.py  setup_wizard.py  test_updated_server.py  verify_setup.py  workdrive_advanced_discovery.py  workdrive_summary.py
(+26 files in other folders)
